--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -244,7 +244,11 @@
    <addaction name="menuSettings"/>
    <addaction name="menuHelp"/>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
+  <widget class="QStatusBar" name="statusBar">
+   <property name="sizeGripEnabled">
+    <bool>true</bool>
+   </property>
+  </widget>
   <action name="actionLogin">
    <property name="icon">
     <iconset resource="icons.qrc">
