--- a/addsessiondialog.ui
+++ b/addsessiondialog.ui
@@ -9,12 +9,16 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>321</width>
-    <height>297</height>
+    <width>350</width>
+    <height>350</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Добавить сеанс</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="icons.qrc">
+    <normaloff>:/icons/icons/add2.ico</normaloff>:/icons/icons/add2.ico</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout" columnstretch="1,2" columnminimumwidth="0,0">
    <property name="leftMargin">
@@ -45,7 +49,7 @@
       <bool>true</bool>
      </property>
      <property name="insertPolicy">
-      <enum>QComboBox::NoInsert</enum>
+      <enum>QComboBox::InsertAtBottom</enum>
      </property>
     </widget>
    </item>
@@ -120,6 +124,9 @@
      </property>
      <attribute name="horizontalHeaderCascadingSectionResizes">
       <bool>true</bool>
+     </attribute>
+     <attribute name="horizontalHeaderDefaultSectionSize">
+      <number>112</number>
      </attribute>
      <attribute name="horizontalHeaderStretchLastSection">
       <bool>true</bool>
@@ -209,6 +216,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="icons.qrc"/>
+ </resources>
  <connections/>
 </ui>
