--- a/editsessiondialog.ui
+++ b/editsessiondialog.ui
@@ -6,12 +6,16 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>314</width>
-    <height>155</height>
+    <width>334</width>
+    <height>362</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Изменить сеанс</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="icons.qrc">
+    <normaloff>:/icons/icons/edit2.ico</normaloff>:/icons/icons/edit2.ico</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout" columnstretch="1,2">
    <item row="0" column="0">
@@ -44,14 +48,7 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="1" rowspan="2">
-    <widget class="QDateEdit" name="dateEdit">
-     <property name="calendarPopup">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0" rowspan="2">
+   <item row="3" column="0">
     <widget class="QLabel" name="label_4">
      <property name="text">
       <string>Время</string>
@@ -61,14 +58,7 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
-    <widget class="QTimeEdit" name="timeEdit">
-     <property name="displayFormat">
-      <string>HH:mm</string>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="0">
+   <item row="5" column="0">
     <widget class="QLabel" name="hallLabel">
      <property name="text">
       <string>Зал</string>
@@ -78,7 +68,7 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="1">
+   <item row="5" column="1">
     <widget class="QComboBox" name="hallComboBox">
      <property name="editable">
       <bool>true</bool>
@@ -88,7 +78,43 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="0" colspan="2">
+   <item row="6" column="0">
+    <widget class="QLabel" name="priceLabel">
+     <property name="text">
+      <string>Цены</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="1">
+    <widget class="QTableWidget" name="priceTable">
+     <property name="rowCount">
+      <number>0</number>
+     </property>
+     <attribute name="horizontalHeaderCascadingSectionResizes">
+      <bool>true</bool>
+     </attribute>
+     <attribute name="horizontalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
+     <attribute name="verticalHeaderVisible">
+      <bool>false</bool>
+     </attribute>
+     <column>
+      <property name="text">
+       <string>Сектор</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Цена, грн.</string>
+      </property>
+     </column>
+    </widget>
+   </item>
+   <item row="7" column="0" colspan="2">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <spacer name="horizontalSpacer_2">
@@ -132,8 +158,24 @@
      </item>
     </layout>
    </item>
+   <item row="1" column="1">
+    <widget class="QDateEdit" name="dateEdit">
+     <property name="calendarPopup">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QTimeEdit" name="timeEdit">
+     <property name="displayFormat">
+      <string>HH:mm</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="icons.qrc"/>
+ </resources>
  <connections/>
 </ui>
