--- a/employeesdialog.ui
+++ b/employeesdialog.ui
@@ -139,30 +139,46 @@
    </item>
   </layout>
   <action name="actionAddEmployee">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/icons/icons/add2.ico</normaloff>:/icons/icons/add2.ico</iconset>
+   </property>
    <property name="text">
-    <string>Добавить</string>
+    <string>Добавить сотрудника</string>
    </property>
    <property name="toolTip">
     <string>Добавить сотрудника</string>
    </property>
   </action>
   <action name="actionEditEmployee">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/icons/icons/edit2.ico</normaloff>:/icons/icons/edit2.ico</iconset>
+   </property>
    <property name="text">
-    <string>Изменить</string>
+    <string>Изменить сотрудника</string>
    </property>
    <property name="toolTip">
     <string>Изменить данные сотрудника</string>
    </property>
   </action>
   <action name="actionRemoveEmployee">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/icons/icons/remove2.ico</normaloff>:/icons/icons/remove2.ico</iconset>
+   </property>
    <property name="text">
-    <string>Удалить</string>
+    <string>Удалить сотрудника</string>
    </property>
    <property name="toolTip">
     <string>Удалить сотрудника</string>
    </property>
   </action>
   <action name="actionUpdateEmployees">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/icons/icons/update.ico</normaloff>:/icons/icons/update.ico</iconset>
+   </property>
    <property name="text">
     <string>Обновить</string>
    </property>
